--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "svadba-car_frontend",
+  "name": "phuket-rent-mix_frontend",
   "version": "1.0.0",
   "description": "",
   "main": "gulpfile.js",
@@ -23,6 +23,7 @@
     "gulp-cheerio": "^0.6.3",
     "gulp-clean-css": "^3.10.0",
     "gulp-combine-media-queries": "^0.2.0",
+    "gulp-file-include": "^2.0.1",
     "gulp-group-css-media-queries": "^1.2.2",
     "gulp-if": "^2.0.2",
     "gulp-imagemin": "^3.1.1",
@@ -49,6 +50,7 @@
     "babel-preset-env": "^1.7.0",
     "jshint-stylish": "^2.2.1",
     "on-exit": "^1.0.1",
-    "rupture": "^0.7.1"
+    "rupture": "^0.7.1",
+    "svgo": "^1.0.5"
   }
 }
